--- a/pageObjects/searchPageObject/searchpage_locators.yaml
+++ b/pageObjects/searchPageObject/searchpage_locators.yaml
@@ -2,3 +2,4 @@ enterflightNumber: '//android.widget.TextView[@resource-id="com.example.myapplic
 flightnumber_input: '//android.widget.EditText[@resource-id="com.example.myapplication:id/flight_number"]'
 searchFlight: '//android.widget.Button[@resource-id="com.example.myapplication:id/searchFlight"]'
 flightdetails: '//android.widget.TextView[@text="Schedule"]'
+invalidsearch_text: 'Please enter valid Flight Number'
